# open_env_bhunesh

./: Dockerfile  README.md  __init__.py  baseline_inference.py  client.py  evaluation.py  inference.py  models.py  openenv.yaml  pyproject.toml  task_catalog.py
server/: Dockerfile  __init__.py  app.py  requirements.txt  support_ops_env_environment.py
